# Python_Web

./: .gitignore
Datebases/: init_todo.sql  main.py  pyproject.toml  repository.py  todo.db
Datebases/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
Django_quotes/hw_project/hw_project/: settings.py
Django_quotes/hw_project/quotes/: admin.py  forms.py  models.py  urls.py  views.py
Django_quotes/hw_project/users/: forms.py  urls.py  views.py
Django_quotes/hw_project/utils/: migration.py
Django_quotes_13/hw_project/hw_project/: settings.py  urls.py
Django_quotes_13/hw_project/quotes/: forms.py  utils.py  views.py
Fastapi_13/: pyproject.toml
Fastapi_13/migrations/: env.py
Fastapi_13/migrations/versions/: 04d1be36273b_init.py  f21007a41c85_add_users.py
Fastapi_13/postgres-data/base/16384/: pg_internal.init
Fastapi_13/postgres-data/global/: pg_control  pg_internal.init
Fastapi_13/postgres-data/pg_stat/: db_13481.stat  db_16384.stat  global.stat
Fastapi_13/src/: schemas.py
Fastapi_13/src/conf/: config.py
Fastapi_13/src/database/: models.py
Fastapi_13/src/routes/: auth.py
Fastapi_13/src/services/: auth.py
Fastapi_auth/: main.py  pyproject.toml
Fastapi_auth/src/: schemas.py
Fastapi_project/: main.py  pyproject.toml
Fastapi_project/src/: schemas.py
Homework_2/: Dockerfile  pyproject.toml  requirements.txt
Homework_2/src/notebook/: classes.py  main.py
NoSQL/: pyproject.toml
NoSQL/RabbitMQ/: config.ini  connect.py  consumer.py  models.py  producer.py
NoSQL/nosql/: config.ini  connect.py  json_to_db.py  models.py  quote_search.py  seed.py
PrivatBank_API/: main.py  requirements.txt
PrivatBank_API/chat/: log_file.txt  server-ws.py
Project_BitHive/: README.md
Rest_Api/: main.py  pyproject.toml  test.db
Rest_Api/docs/: conf.py
Rest_Api/src/: schemas.py
Rest_Api/src/conf/: config.py
Rest_Api/tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
SQLAlchemy_db/: alembic.ini  connect_db.py  handler.py  main.py  models.py  my_select.py  seed.py
Website/: Dockerfile  main.py
Website/storage/: data.json
sorter/: pyproject.toml
sorter/sorter/: factorize.py  main.py
web_scraping/: pyproject.toml
web_scraping/web_spider/: authors.json
web_scraping/web_spider/web_spider/: middlewares.py  settings.py
web_scraping/web_spider/web_spider/spiders/: authors.py  main.py  quotes.py
(+56 files in other folders)
