[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = "Scrapy"
authors = ["Ralitnyi <127546804+Ralitnyi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
